Changing App Name

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mnp.jetpackcomposetabs">
+    package="com.mnp.jetpackcomposetabsexample">
 
     <application
         android:allowBackup="true"
@@ -8,12 +8,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.JetpackComposeTabs">
+        android:theme="@style/Theme.JetpackComposeTabsExample">
         <activity
-            android:name="com.mnp.jetpackcomposetabs.MainActivity"
+            android:name="com.mnp.jetpackcomposetabsexample.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.JetpackComposeTabs">
+            android:theme="@style/Theme.JetpackComposeTabsExample">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
